added application file

--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,5 @@
-utility to convert between cases like SCREAMING_SNAKE_CASE <-> snake_case <-> PascalCase
+- Determine style (offset braces, capital fn names and class names, prepend private vars with _ and use camelCase for all vars)
+		  determine[file name case, case for modules (is it different?);
+
+- Utility to convert between cases like SCREAMING_SNAKE_CASE <-> snake_case <-> PascalCase
+- File system watcher
