added entities, components, and transforms

--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,5 @@
 - File system watcher
 
 - Context accessor friend macro: allow certain things to be uniformly accessed for a single context with context() and the context accessor/manager would handle setting the pointer
+
+- script to generate files from stub/template
